--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,1 +1,47 @@
-<p>category-list works!</p>
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+            <a routerLink="/">Home</a>
+        </li>
+        <li class="breadcrumb-item active">
+            Categorias
+        </li>
+    </ol>
+</nav>
+
+<div class="row mb-4">
+    <div class="col-md">
+        <h1 class="h2 border-left pl-2">
+            Categorias
+        </h1>
+    </div>
+
+    <div class="col-md">
+        <a routerLink="new" class="btn btn-success float-right">+ Nova categoria</a>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-12">
+        <table class="table table-hover">
+            <thead>
+                <tr class="bg-primary text-light">
+                    <th>Categoria</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>
+                        <strong>Lazer</strong><br>
+                        <small>Cinema, parque, praia, etc</small>
+                    </td>
+                    <td>
+                        <button type="button" [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
+                        <button type="button" (click)="alert('excluir')" class="btn btn-outline-danger btn-sm">Excluir</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
