add categories service

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -38,7 +38,7 @@
                     </td>
                     <td>
                         <button type="button" [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
-                        <button type="button" (click)="alert('excluir')" class="btn btn-outline-danger btn-sm">Excluir</button>
+                        <button type="button" class="btn btn-outline-danger btn-sm">Excluir</button>
                     </td>
                 </tr>
             </tbody>
