--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
+<!-- <div class="progress" style="height: 7px;" *ngIf="loading">
+    <div class="progress-bar bg-warning progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+</div> -->
+
+<ngx-loading-bar color="#2196f3" height="4px" [includeSpinner]="false"></ngx-loading-bar>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
     <a class="navbar-brand" routerLink="/">Finansys</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	  <span class="navbar-toggler-icon"></span>
-	</button>
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item" routerLinkActive="active">
