--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -31,14 +31,14 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr *ngFor="let category of categories">
                     <td>
-                        <strong>Lazer</strong><br>
-                        <small>Cinema, parque, praia, etc</small>
+                        <strong>{{category.name}}</strong><br>
+                        <small>{{category.description}}</small>
                     </td>
                     <td>
-                        <button type="button" [routerLink]="[12, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
-                        <button type="button" class="btn btn-outline-danger btn-sm">Excluir</button>
+                        <button type="button" [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
+                        <button type="button" (click)="deleteCategory(category)" class="btn btn-outline-danger btn-sm">Excluir</button>
                     </td>
                 </tr>
             </tbody>
