--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -19,8 +19,7 @@
     </div>
 </div>
 
-<form>
-
+<form [formGroup]="categoryForm">
     <div class="card">
         <div class="card-header">Informações sobre a categoria</div>
 
@@ -40,5 +39,4 @@
     </div>
 
     <button type="submit" class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
-
 </form>
