--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -6,20 +6,20 @@
         <li class="breadcrumb-item">
             <a routerLink="/categories">Categorias</a>
         </li>
-        <li class="breadcrumb-item active">Formulário de categorias</li>
+        <li class="breadcrumb-item active">{{pageTitle}}</li>
     </ol>
 </nav>
 
 <div class="row mb-4">
     <div class="col-md">
-        <h1 class="h2 border-left pl-2">Formulário de categorias</h1>
+        <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
     </div>
     <div class="col-md">
         <a routerLink="/categories" class="btn btn-light float-right">Voltar</a>
     </div>
 </div>
 
-<form [formGroup]="categoryForm">
+<form [formGroup]="categoryForm" (submit)="submitForm()">
     <div class="card">
         <div class="card-header">Informações sobre a categoria</div>
 
@@ -27,16 +27,21 @@
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="name">Nome</label>
-                    <input type="text" class="form-control" id="name">
+                    <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name">
+
+                    <div class="text-danger" *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
+                        <div *ngIf="categoryForm.get('name').errors?.required">Campo obrigatório</div>
+                        <div *ngIf="categoryForm.get('name').errors?.minlength">Mínimo 2 caracteres</div>
+                    </div>
                 </div>
 
                 <div class="form-group col-md-8">
                     <label for="description">Descrição</label>
-                    <input type="text" class="form-control" id="description">
+                    <input type="text" class="form-control" id="description" autocomplete="false" formControlName="description">
                 </div>
             </div>
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
+    <button type="submit" class="btn btn-primary btn-lg float-right mt-3" [disabled]="submittingForm || categoryForm.invalid">Salvar</button>
 </form>
