--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -43,5 +43,12 @@
         </div>
     </div>
 
+    <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
+        <strong>Error no servidor:</strong>
+        <ul>
+            <li *ngFor="let error of serverErrorMessages">{{error}}</li>
+        </ul>
+    </div>
+
     <button type="submit" class="btn btn-primary btn-lg float-right mt-3" [disabled]="submittingForm || categoryForm.invalid">Salvar</button>
 </form>
