--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -24,9 +24,24 @@
         <div class="card-header">Informações sobre o lançamento</div>
 
         <div class="card-body">
+
             <div class="form-row">
-                <div class="form-group col-md-4">
-                    <label for="name">Nome</label>
+                <!-- ? Type -->
+                <div class="form-group col-md-2">
+                    <label for="type">Tipo</label>
+                    <select name="type" id="type" formControlName="type" class="form-control">
+                        <option value="expense">Despesa</option>
+                        <option value="revenue">Receita</option>
+                    </select>
+
+                    <div class="text-danger" *ngIf="entryForm.get('type').invalid && entryForm.get('type').touched">
+                        <div *ngIf="entryForm.get('type').errors?.required">Campo obrigatório</div>
+                    </div>
+                </div>
+
+                <!-- ? Name -->
+                <div class="form-group col-md-5">
+                    <label for="name">Lançamento</label>
                     <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name">
 
                     <div class="text-danger" *ngIf="entryForm.get('name').invalid && entryForm.get('name').touched">
@@ -35,9 +50,73 @@
                     </div>
                 </div>
 
-                <div class="form-group col-md-8">
+                <!-- ? amount -->
+                <div class="form-group col-md-3">
+                    <label for="amount">Valor</label>
+
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">R$</div>
+                        </div>
+                        <input [imask]="imaskConfig" type="text" class="form-control text-right" id="amount"
+                            autocomplete="false" formControlName="amount">
+                    </div>
+
+                    <div class="text-danger" *ngIf="entryForm.get('amount').invalid && entryForm.get('amount').touched">
+                        <div *ngIf="entryForm.get('amount').errors?.required">Campo obrigatório</div>
+                    </div>
+                </div>
+
+                <!-- ? date -->
+                <div class="form-group col-md-2">
+                    <label for="date">Data</label>
+
+                    <p-calendar id="date" formControlName="date" inputStyleClass="form-control" dateType="string"
+                        dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]="true"></p-calendar>
+
+                    <div class="text-danger" *ngIf="entryForm.get('date').invalid && entryForm.get('date').touched">
+                        <div *ngIf="entryForm.get('date').errors?.required">Campo obrigatório</div>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="form-row">
+                <!-- ? paid -->
+                <div class="form-group col-md-2">
+                    <label for="paid">Pago</label>
+
+                    <div class="btn-group">
+                        <label (click)="entryForm.get('paid').setValue(true)"
+                            [class.active]="entryForm.get('paid').value === true"
+                            class="btn btn-outline-info">Pago</label>
+                        <label (click)="entryForm.get('paid').setValue(false)"
+                            [class.active]="entryForm.get('paid').value === false"
+                            class="btn btn-outline-info">Pendente</label>
+                    </div>
+
+                    <div class="text-danger" *ngIf="entryForm.get('paid').invalid && entryForm.get('paid').touched">
+                        <div *ngIf="entryForm.get('paid').errors?.required">Campo obrigatório</div>
+                    </div>
+                </div>
+
+                <!-- ? categoryId -->
+                <div class="form-group col-md-3">
+                    <label for="categoryId">Categoria</label>
+                    <select name="categoryId" id="categoryId" formControlName="categoryId" class="form-control">
+                    <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
+                    </select>
+
+                    <div class="text-danger" *ngIf="entryForm.get('categoryId').invalid && entryForm.get('categoryId').touched">
+                        <div *ngIf="entryForm.get('categoryId').errors?.required">Campo obrigatório</div>
+                    </div>
+                </div>
+
+                <!-- ? Description -->
+                <div class="form-group col-md-7">
                     <label for="description">Descrição</label>
-                    <input type="text" class="form-control" id="description" autocomplete="false" formControlName="description">
+                    <input type="text" class="form-control" id="description" autocomplete="false"
+                        formControlName="description">
                 </div>
             </div>
         </div>
@@ -50,5 +129,6 @@
         </ul>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-lg float-right mt-3" [disabled]="submittingForm || entryForm.invalid">Salvar</button>
+    <button type="submit" class="btn btn-primary btn-lg float-right mt-3"
+        [disabled]="submittingForm || entryForm.invalid">Salvar</button>
 </form>
