--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -71,7 +71,7 @@
                 <div class="form-group col-md-2">
                     <label for="date">Data</label>
 
-                    <p-calendar id="date" formControlName="date" inputStyleClass="form-control" dateType="string"
+                    <p-calendar id="date" formControlName="date" inputStyleClass="form-control" dataType="string"
                         dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]="true"></p-calendar>
 
                     <div class="text-danger" *ngIf="entryForm.get('date').invalid && entryForm.get('date').touched">
