--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<form [formGroup]="categoryForm" (submit)="submitForm()">
+<form [formGroup]="resourceForm" (submit)="submitForm()">
     <div class="card">
         <div class="card-header">Informações sobre a categoria</div>
 
@@ -29,9 +29,9 @@
                     <label for="name">Nome</label>
                     <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name">
 
-                    <div class="text-danger" *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
-                        <div *ngIf="categoryForm.get('name').errors?.required">Campo obrigatório</div>
-                        <div *ngIf="categoryForm.get('name').errors?.minlength">Mínimo 2 caracteres</div>
+                    <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+                        <div *ngIf="resourceForm.get('name').errors?.required">Campo obrigatório</div>
+                        <div *ngIf="resourceForm.get('name').errors?.minlength">Mínimo 2 caracteres</div>
                     </div>
                 </div>
 
@@ -50,5 +50,5 @@
         </ul>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-lg float-right mt-3" [disabled]="submittingForm || categoryForm.invalid">Salvar</button>
+    <button type="submit" class="btn btn-primary btn-lg float-right mt-3" [disabled]="submittingForm || resourceForm.invalid">Salvar</button>
 </form>
