BaseResourceListComponent criado e melhorando CategoryList e EntryList

--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -31,14 +31,14 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let category of categories">
+                <tr *ngFor="let category of resources">
                     <td>
                         <strong>{{category.name}}</strong><br>
                         <small>{{category.description}}</small>
                     </td>
                     <td>
                         <button type="button" [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
-                        <button type="button" (click)="deleteCategory(category)" class="btn btn-outline-danger btn-sm">Excluir</button>
+                        <button type="button" (click)="deleteResource(category)" class="btn btn-outline-danger btn-sm">Excluir</button>
                     </td>
                 </tr>
             </tbody>
