--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -33,7 +33,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let entry of entries">
+                <tr *ngFor="let entry of resources">
                     <td>
                         <strong>{{entry.name}}</strong><br>
                         <small class="text-success">{{entry.date}}</small><br>
@@ -49,7 +49,7 @@
                     </td>
                     <td class="text-center">
                         <button type="button" [routerLink]="[entry.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
-                        <button type="button" (click)="deleteEntry(entry)" class="btn btn-outline-danger btn-sm">Excluir</button>
+                        <button type="button" (click)="deleteResource(entry)" class="btn btn-outline-danger btn-sm">Excluir</button>
                     </td>
                 </tr>
             </tbody>
