--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,14 +1,4 @@
-<nav class="mb-5">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-            <a routerLink="/">Home</a>
-        </li>
-        <li class="breadcrumb-item">
-            <a routerLink="/categories">Categorias</a>
-        </li>
-        <li class="breadcrumb-item active">{{pageTitle}}</li>
-    </ol>
-</nav>
+<app-bread-crumb [items]="[{text: 'Categorias', link: '/categories'}, {text: pageTitle}]"></app-bread-crumb>
 
 <div class="row mb-4">
     <div class="col-md">
@@ -29,7 +19,8 @@
                     <label for="name">Nome</label>
                     <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name">
 
-                    <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+                    <div class="text-danger"
+                        *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
                         <div *ngIf="resourceForm.get('name').errors?.required">Campo obrigatório</div>
                         <div *ngIf="resourceForm.get('name').errors?.minlength">Mínimo 2 caracteres</div>
                     </div>
@@ -37,7 +28,8 @@
 
                 <div class="form-group col-md-8">
                     <label for="description">Descrição</label>
-                    <input type="text" class="form-control" id="description" autocomplete="false" formControlName="description">
+                    <input type="text" class="form-control" id="description" autocomplete="false"
+                        formControlName="description">
                 </div>
             </div>
         </div>
@@ -50,5 +42,6 @@
         </ul>
     </div>
 
-    <button type="submit" class="btn btn-primary btn-lg float-right mt-3" [disabled]="submittingForm || resourceForm.invalid">Salvar</button>
+    <button type="submit" class="btn btn-primary btn-lg float-right mt-3"
+        [disabled]="submittingForm || resourceForm.invalid">Salvar</button>
 </form>
