Compentizando page header

--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -1,13 +1,7 @@
 <app-bread-crumb [items]="[{text: 'Lançamentos', link: '/entries'}, {text: pageTitle}]"></app-bread-crumb>
 
-<div class="row mb-4">
-    <div class="col-md-9">
-        <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
-    </div>
-    <div class="col-md-3">
-        <a routerLink="/entries" class="btn btn-light float-right">Voltar</a>
-    </div>
-</div>
+<app-page-header [page-title]="pageTitle" button-text="Voltar" button-link="/entries" button-class="btn-light">
+</app-page-header>
 
 <form [formGroup]="resourceForm" (submit)="submitForm()">
     <div class="card">
@@ -24,7 +18,8 @@
                         <option value="revenue">Receita</option>
                     </select>
 
-                    <div class="text-danger" *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
+                    <div class="text-danger"
+                        *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
                         <div *ngIf="resourceForm.get('type').errors?.required">Campo obrigatório</div>
                     </div>
                 </div>
@@ -34,7 +29,8 @@
                     <label for="name">Lançamento</label>
                     <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name">
 
-                    <div class="text-danger" *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
+                    <div class="text-danger"
+                        *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
                         <div *ngIf="resourceForm.get('name').errors?.required">Campo obrigatório</div>
                         <div *ngIf="resourceForm.get('name').errors?.minlength">Mínimo 2 caracteres</div>
                     </div>
@@ -52,7 +48,8 @@
                             autocomplete="false" formControlName="amount">
                     </div>
 
-                    <div class="text-danger" *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
+                    <div class="text-danger"
+                        *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
                         <div *ngIf="resourceForm.get('amount').errors?.required">Campo obrigatório</div>
                     </div>
                 </div>
@@ -64,7 +61,8 @@
                     <p-calendar id="date" formControlName="date" inputStyleClass="form-control" dataType="string"
                         dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]="true"></p-calendar>
 
-                    <div class="text-danger" *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
+                    <div class="text-danger"
+                        *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
                         <div *ngIf="resourceForm.get('date').errors?.required">Campo obrigatório</div>
                     </div>
                 </div>
@@ -85,7 +83,8 @@
                             class="btn btn-outline-info">Pendente</label>
                     </div>
 
-                    <div class="text-danger" *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
+                    <div class="text-danger"
+                        *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
                         <div *ngIf="resourceForm.get('paid').errors?.required">Campo obrigatório</div>
                     </div>
                 </div>
@@ -94,10 +93,11 @@
                 <div class="form-group col-md-3">
                     <label for="categoryId">Categoria</label>
                     <select name="categoryId" id="categoryId" formControlName="categoryId" class="form-control">
-                    <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
+                        <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
                     </select>
 
-                    <div class="text-danger" *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
+                    <div class="text-danger"
+                        *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
                         <div *ngIf="resourceForm.get('categoryId').errors?.required">Campo obrigatório</div>
                     </div>
                 </div>
