--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -1,13 +1,7 @@
-<app-bread-crumb [items]="[{text: 'Categorias', link: '/categories'}, {text: pageTitle}]"></app-bread-crumb>
+<app-bread-crumb [items]="[{ text: 'Categorias', link: '/categories' }, { text: pageTitle }]"></app-bread-crumb>
 
-<div class="row mb-4">
-    <div class="col-md">
-        <h1 class="h2 border-left pl-2">{{pageTitle}}</h1>
-    </div>
-    <div class="col-md">
-        <a routerLink="/categories" class="btn btn-light float-right">Voltar</a>
-    </div>
-</div>
+<app-page-header [page-title]="pageTitle" button-text="Voltar" button-link="/categories" button-class="btn-light">
+</app-page-header>
 
 <form [formGroup]="resourceForm" (submit)="submitForm()">
     <div class="card">
@@ -17,19 +11,25 @@
             <div class="form-row">
                 <div class="form-group col-md-4">
                     <label for="name">Nome</label>
-                    <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name">
+                    <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name" />
 
-                    <div class="text-danger"
-                        *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
-                        <div *ngIf="resourceForm.get('name').errors?.required">Campo obrigatório</div>
-                        <div *ngIf="resourceForm.get('name').errors?.minlength">Mínimo 2 caracteres</div>
+                    <div class="text-danger" *ngIf="
+							resourceForm.get('name').invalid &&
+							resourceForm.get('name').touched
+						">
+                        <div *ngIf="resourceForm.get('name').errors?.required">
+                            Campo obrigatório
+                        </div>
+                        <div *ngIf="resourceForm.get('name').errors?.minlength">
+                            Mínimo 2 caracteres
+                        </div>
                     </div>
                 </div>
 
                 <div class="form-group col-md-8">
                     <label for="description">Descrição</label>
                     <input type="text" class="form-control" id="description" autocomplete="false"
-                        formControlName="description">
+                        formControlName="description" />
                 </div>
             </div>
         </div>
@@ -38,10 +38,12 @@
     <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
         <strong>Error no servidor:</strong>
         <ul>
-            <li *ngFor="let error of serverErrorMessages">{{error}}</li>
+            <li *ngFor="let error of serverErrorMessages">{{ error }}</li>
         </ul>
     </div>
 
     <button type="submit" class="btn btn-primary btn-lg float-right mt-3"
-        [disabled]="submittingForm || resourceForm.invalid">Salvar</button>
+        [disabled]="submittingForm || resourceForm.invalid">
+        Salvar
+    </button>
 </form>
