--- a/src/app/pages/categories/category-list/category-list.component.html
+++ b/src/app/pages/categories/category-list/category-list.component.html
@@ -1,16 +1,7 @@
-<app-bread-crumb [items]="[{text: 'Categorias'}]"></app-bread-crumb>
+<app-bread-crumb [items]="[{ text: 'Categorias' }]"></app-bread-crumb>
 
-<div class="row mb-4">
-    <div class="col-md">
-        <h1 class="h2 border-left pl-2">
-            Categorias
-        </h1>
-    </div>
-
-    <div class="col-md">
-        <a routerLink="new" class="btn btn-success float-right">+ Nova categoria</a>
-    </div>
-</div>
+<app-page-header page-title="Categorias" button-text="Nova categorias" button-link="new" button-class="btn-success">
+</app-page-header>
 
 <div class="row">
     <div class="col-12">
@@ -24,12 +15,17 @@
             <tbody>
                 <tr *ngFor="let category of resources">
                     <td>
-                        <strong>{{category.name}}</strong><br>
-                        <small>{{category.description}}</small>
+                        <strong>{{ category.name }}</strong><br />
+                        <small>{{ category.description }}</small>
                     </td>
                     <td>
-                        <button type="button" [routerLink]="[category.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
-                        <button type="button" (click)="deleteResource(category)" class="btn btn-outline-danger btn-sm">Excluir</button>
+                        <button type="button" [routerLink]="[category.id, 'edit']"
+                            class="btn btn-outline-info btn-sm mr-2">
+                            Editar
+                        </button>
+                        <button type="button" (click)="deleteResource(category)" class="btn btn-outline-danger btn-sm">
+                            Excluir
+                        </button>
                     </td>
                 </tr>
             </tbody>
