--- a/src/app/pages/entries/entry-list/entry-list.component.html
+++ b/src/app/pages/entries/entry-list/entry-list.component.html
@@ -1,16 +1,7 @@
-<app-bread-crumb [items]="[{text: 'Categorias'}]"></app-bread-crumb>
+<app-bread-crumb [items]="[{text: 'Lançamentos'}]"></app-bread-crumb>
 
-<div class="row mb-4">
-    <div class="col-md">
-        <h1 class="h2 border-left pl-2">
-            Lançamentos 
-        </h1>
-    </div>
-
-    <div class="col-md">
-        <a routerLink="new" class="btn btn-success float-right">+ Novo lançamento</a>
-    </div>
-</div>
+<app-page-header page-title="Lançamentos" button-text="Novo lançamento" button-link="new" button-class="btn-success">
+</app-page-header>
 
 <div class="row">
     <div class="col-12">
@@ -34,13 +25,16 @@
                         {{entry.category.name}}
                     </td>
                     <td class="text-right">
-                        <strong [ngClass]="{'text-success': entry.type === 'revenue', 'text-danger': entry.type === 'expense'}">{{entry.amount}}</strong>
+                        <strong
+                            [ngClass]="{'text-success': entry.type === 'revenue', 'text-danger': entry.type === 'expense'}">{{entry.amount}}</strong>
                         <br>
                         <span class="badge badge-light">{{entry.paidText}}</span>
                     </td>
                     <td class="text-center">
-                        <button type="button" [routerLink]="[entry.id, 'edit']" class="btn btn-outline-info btn-sm mr-2">Editar</button>
-                        <button type="button" (click)="deleteResource(entry)" class="btn btn-outline-danger btn-sm">Excluir</button>
+                        <button type="button" [routerLink]="[entry.id, 'edit']"
+                            class="btn btn-outline-info btn-sm mr-2">Editar</button>
+                        <button type="button" (click)="deleteResource(entry)"
+                            class="btn btn-outline-danger btn-sm">Excluir</button>
                     </td>
                 </tr>
             </tbody>
