--- a/src/app/pages/entries/entry-form/entry-form.component.html
+++ b/src/app/pages/entries/entry-form/entry-form.component.html
@@ -18,10 +18,7 @@
                         <option value="revenue">Receita</option>
                     </select>
 
-                    <div class="text-danger"
-                        *ngIf="resourceForm.get('type').invalid && resourceForm.get('type').touched">
-                        <div *ngIf="resourceForm.get('type').errors?.required">Campo obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control]="resourceForm.get('type')"></app-form-field-error>
                 </div>
 
                 <!-- ? Name -->
@@ -29,11 +26,7 @@
                     <label for="name">Lançamento</label>
                     <input type="text" class="form-control" id="name" autocomplete="false" formControlName="name">
 
-                    <div class="text-danger"
-                        *ngIf="resourceForm.get('name').invalid && resourceForm.get('name').touched">
-                        <div *ngIf="resourceForm.get('name').errors?.required">Campo obrigatório</div>
-                        <div *ngIf="resourceForm.get('name').errors?.minlength">Mínimo 2 caracteres</div>
-                    </div>
+                    <app-form-field-error [form-control]="resourceForm.get('name')"></app-form-field-error>
                 </div>
 
                 <!-- ? amount -->
@@ -48,10 +41,7 @@
                             autocomplete="false" formControlName="amount">
                     </div>
 
-                    <div class="text-danger"
-                        *ngIf="resourceForm.get('amount').invalid && resourceForm.get('amount').touched">
-                        <div *ngIf="resourceForm.get('amount').errors?.required">Campo obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control]="resourceForm.get('amount')"></app-form-field-error>
                 </div>
 
                 <!-- ? date -->
@@ -61,10 +51,7 @@
                     <p-calendar id="date" formControlName="date" inputStyleClass="form-control" dataType="string"
                         dateFormat="dd/mm/yy" [locale]="ptBR" [showButtonBar]="true"></p-calendar>
 
-                    <div class="text-danger"
-                        *ngIf="resourceForm.get('date').invalid && resourceForm.get('date').touched">
-                        <div *ngIf="resourceForm.get('date').errors?.required">Campo obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control]="resourceForm.get('date')"></app-form-field-error>
                 </div>
 
             </div>
@@ -83,10 +70,7 @@
                             class="btn btn-outline-info">Pendente</label>
                     </div>
 
-                    <div class="text-danger"
-                        *ngIf="resourceForm.get('paid').invalid && resourceForm.get('paid').touched">
-                        <div *ngIf="resourceForm.get('paid').errors?.required">Campo obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control]="resourceForm.get('paid')"></app-form-field-error>
                 </div>
 
                 <!-- ? categoryId -->
@@ -96,10 +80,7 @@
                         <option *ngFor="let category of categories" [value]="category.id">{{category.name}}</option>
                     </select>
 
-                    <div class="text-danger"
-                        *ngIf="resourceForm.get('categoryId').invalid && resourceForm.get('categoryId').touched">
-                        <div *ngIf="resourceForm.get('categoryId').errors?.required">Campo obrigatório</div>
-                    </div>
+                    <app-form-field-error [form-control]="resourceForm.get('categoryId')"></app-form-field-error>
                 </div>
 
                 <!-- ? Description -->
