--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -25,12 +25,7 @@
         </div>
     </div>
 
-    <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
-        <strong>Error no servidor:</strong>
-        <ul>
-            <li *ngFor="let error of serverErrorMessages">{{ error }}</li>
-        </ul>
-    </div>
+    <app-server-error-messages [server-error-messages]="serverErrorMessages"></app-server-error-messages>
 
     <button type="submit" class="btn btn-primary btn-lg float-right mt-3"
         [disabled]="submittingForm || resourceForm.invalid">
