melhoria no PageHeaderComponent

--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -1,6 +1,6 @@
 <app-bread-crumb [items]="[{text: 'Relatório de receitas e despesas'}]"></app-bread-crumb>
 
-<app-page-header page-title="Relatório de receitas e despesas"></app-page-header>
+<app-page-header page-title="Relatório de receitas e despesas" [show-button]="false"></app-page-header>
 
 <div class="card">
     <div class="card-header">
