concluido os reports

--- a/src/app/pages/reports/reports/reports.component.html
+++ b/src/app/pages/reports/reports/reports.component.html
@@ -54,7 +54,7 @@
             Total de receitas
         </div>
         <div class="card-body">
-            <h3 class="card-title">1500</h3>
+            <h3 class="card-title">{{revenueTotal}}</h3>
         </div>
     </div>
 
@@ -63,7 +63,7 @@
             Total de despesas
         </div>
         <div class="card-body">
-            <h3 class="card-title">500</h3>
+        <h3 class="card-title">{{expenseTotal}}</h3>
         </div>
     </div>
 
@@ -72,7 +72,7 @@
             Saldo
         </div>
         <div class="card-body">
-            <h3 class="card-title">100</h3>
+            <h3 class="card-title">{{balance}}</h3>
         </div>
     </div>
 </div>
@@ -81,10 +81,10 @@
 
 <div class="row mt-5 mb-4">
     <div class="col-md-6">
-        Grafico de receitas
+        <p-chart type="bar" [data]="revenueChartData" [options]="chartOptions"></p-chart>
     </div>
 
     <div class="col-md-6">
-        gráfico de despesas
+        <p-chart type="bar" [data]="expenseChartData" [options]="chartOptions"></p-chart>
     </div>
 </div>
